# raytracing

./: .gitignore  Cargo.toml  README.md  shell.nix
examples/: cornel_box.rs  final_scene.rs  spheres.rs  spheres_bvh.rs
src/: aabb.rs  blobvec.rs  bvh.rs  camera.rs  hittable.rs  lib.rs  main.rs  material.rs  objects.rs  onb.rs  pdf.rs  perlin.rs  ray.rs  renderer.rs  sphere.rs  texture.rs  transforms.rs  vec3.rs  world.rs
