[package]
name = "rust_raytracing"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = true

[dependencies]
sdl2 = "0.34.5"
rand = "0.8.3"
image = "0.23.14"

[[example]]
name = "cornel_box"
path = "examples/cornel_box.rs"

[[example]]
name = "final_scene"
path = "examples/final_scene.rs"

[[example]]
name = "spheres"
path = "examples/spheres.rs"
